<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="LoginText">Iniciar sesión</string>
    <string name="UserNameText">Nombre de usuario</string>
    <string name="HintUsername">Introduce tu nombre de usuario</string>
    <string name="PasswordText">Contraseña</string>
    <string name="PasswordHint">Introduce tu contraseña</string>
    <string name="SignInText">Registrarse</string>
    <string name="app_name">FightBall</string>
    <string name="voidtext">Text</string>
    <string name="partidasJugadas">Partidas Jugadas</string>
    <string name="personajeMasUsado">Personaje Mas Usado</string>
    <string name="partidasPerdidas">PartidasPerdidas</string>
    <string name="partidasGanadas">PartidasGanadas</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="VerPersonajes">Ver Personajes</string>
    <string name="verPartidas">Ver Partidas</string>
    <string name="verObjetos">Ver Objetos</string>
    <string name="acercade">Acerca De</string>
    <string name="anyadirPelicula">Añadir Pelicula</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Jugador">Jugador</string>
    <string name="Moderador">Moderador</string>
    <string name="Administrador">Administrador</string>
    <string name="ElijaModo">Elija modo de Vista</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="partidasTotales">Partidas Totales Registradas</string>
    <string name="rolesDisponibles">Roles Disponibles</string>
    <string name="Usuarios">Usuarios Registrados</string>
    <string name="verUsuarios">Ver Usuarios</string>
    <string name="verRoles">ver Roles</string>
    <string name="EnviarCorreo">Enviar Correo</string>
    <string name="BuscarEnGoogle">Buscar en Google</string>
    <string name="Tutoriales">Tutoriales</string>
    <string name="VerTutoriales">VerTutoriales</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Editar">Editar</string>
    <string name="AntiguaContra">Contraseña Antigua</string>
    <string name="NuevaContraseña">Nueva Contraseña</string>
    <string name="EditarUsuario">Editar Usuario</string>
    <string name="usuarioEliminado">Usuario Eliminado:</string>
    <string name="GestionRoles">Gestion Roles</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>
